k8s/ingress.optional.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-dashboard
  namespace: portfolio
  annotations:
    # nginx ingress kullanıyorsan açabilirsin:
    # kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: portfolio.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-dashboard
                port:
                  number: 80
